Aligned the left margin correctly

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,7 @@
 .flexbox-item-1 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 10px;
+    margin-left: 30px;
     justify-content: flex-start;
     margin-right: auto;
 }
@@ -41,7 +42,10 @@
 
 .flexbox-item-awesome-head {
     display: flex;
-    border: solid 10px white;
-    margin: 30px;
-    font-size: xx-large;
+    border: solid 10px #f9faf8;
+    margin-top: 150px;
+    margin-bottom: 15px;
+    margin-left: 30px;
+    font-size: 48px;
+    font-weight: bolder;
 }
